--- a/TestApp/mainwindow.ui
+++ b/TestApp/mainwindow.ui
@@ -18,9 +18,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
-      <width>141</width>
-      <height>431</height>
+      <y>0</y>
+      <width>231</width>
+      <height>441</height>
      </rect>
     </property>
     <property name="baseSize">
@@ -31,14 +31,17 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignHCenter|Qt::AlignTop</set>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>240</x>
       <y>0</y>
-      <width>141</width>
+      <width>101</width>
       <height>431</height>
      </rect>
     </property>
@@ -50,14 +53,17 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignHCenter|Qt::AlignTop</set>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>10</y>
-      <width>141</width>
+      <x>340</x>
+      <y>0</y>
+      <width>91</width>
       <height>431</height>
      </rect>
     </property>
@@ -69,14 +75,17 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignHCenter|Qt::AlignTop</set>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>10</y>
-      <width>141</width>
+      <x>430</x>
+      <y>0</y>
+      <width>171</width>
       <height>431</height>
      </rect>
     </property>
@@ -88,6 +97,35 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignHCenter|Qt::AlignTop</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>420</y>
+      <width>80</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>BACK</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>420</y>
+      <width>80</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>NEXT</string>
     </property>
    </widget>
   </widget>
