--- a/TestApp/mainwindow.ui
+++ b/TestApp/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>602</width>
-    <height>509</height>
+    <width>725</width>
+    <height>626</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,10 +17,10 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>0</y>
-      <width>231</width>
-      <height>441</height>
+      <x>20</x>
+      <y>50</y>
+      <width>141</width>
+      <height>491</height>
      </rect>
     </property>
     <property name="baseSize">
@@ -40,9 +40,9 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>0</y>
+      <y>50</y>
       <width>101</width>
-      <height>431</height>
+      <height>491</height>
      </rect>
     </property>
     <property name="baseSize">
@@ -61,10 +61,10 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>0</y>
-      <width>91</width>
-      <height>431</height>
+      <x>170</x>
+      <y>50</y>
+      <width>151</width>
+      <height>491</height>
      </rect>
     </property>
     <property name="baseSize">
@@ -84,9 +84,9 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>0</y>
-      <width>171</width>
-      <height>431</height>
+      <y>50</y>
+      <width>161</width>
+      <height>491</height>
      </rect>
     </property>
     <property name="baseSize">
@@ -105,8 +105,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>420</y>
+      <x>30</x>
+      <y>540</y>
       <width>80</width>
       <height>22</height>
      </rect>
@@ -118,8 +118,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>420</y>
+      <x>630</x>
+      <y>540</y>
       <width>80</width>
       <height>22</height>
      </rect>
@@ -131,27 +131,66 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>420</y>
+      <x>350</x>
+      <y>540</y>
       <width>80</width>
       <height>22</height>
      </rect>
     </property>
     <property name="text">
-     <string>RAHAT VITTUU</string>
+     <string>-100€</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>449</x>
+      <x>590</x>
       <y>10</y>
       <width>131</width>
       <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>KORTTI VITTUUN</string>
+     <string>Poista kortti</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>10</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>AIKA</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>10</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>MAKSU</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_5">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>80</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>QUIT</string>
     </property>
    </widget>
   </widget>
@@ -160,7 +199,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>602</width>
+     <width>725</width>
      <height>21</height>
     </rect>
    </property>
